--- a/Create index.html
+++ b/Create index.html
@@ -6,3 +6,4 @@
   <img src="https://content.codecademy.com/articles/github-pages-via-web-app/happy-ice-cream.gif" />
 </body>
 </html>
+#theme: minima
